# hd24tools

./: LICENSE.txt  Makefile.in  README.txt  configure  configure.in  gc
doc/: ADATFS.txt  COMPILING.txt  DEVELOPING.txt  HARDWARE.txt  LIVERECOVERY.txt  MAILING.txt  RELEASE.txt  SYXformat.txt  TESTPLAN.txt  hd24tools_manual.odt  samplerates.txt  smart_drive_images.txt
doc/artwork/: DMG_Background.psd  HD24Connect.icns  Icon.psd
doc/manual/: abouthd24tools.html  beforeusing.html  choosinghardware.html  copytohd24.html  copytopc.html  crossapplicationaudio.html  disasters.html  disasters_accidentalinit.html  disasters_audioblockoutofrange.html  disasters_invalidformat.html  disasters_other.html  disasters_quickformat.html  disasters_unexpectedendofsong.html  drivelayout.html  drivenumber.html  drivenumber_linux.html  drivenumber_mac.html  drivenumber_windows.html  generalrecoveryproc.html  hd24driverecovery.html  index.html  installing_linux.html  installing_mac.html  installing_windows.html  intro.html  jack_linux.html  raw.html  (+17 more)
images/: longliverec.h24  unquickformat.h24
scripts/: backupscript.txt  decodemtc  encode_smpte.pl  genbackupscript.pl  hd24arm1  hd24arm1-16  hd24arm1-24  hd24arm2  hd24getinfo  hd24idreq  hd24mute1  hd24play  hd24stop  hd24unarmall  listformats.c  makelistformats  midi.c  mkdeb.sh  mtcspeak  off2sec.pl  sec2off.pl  showstoppedmtc  sl2o.pl
src/: hd24hexview.cpp  hd24info.cpp  hd24syx2bin.cpp  hd24towav.cpp  hd24wavefix.cpp
windows/: README.txt  hd24connect.dsp  hd24connect.dsw  hd24hexview.dsp  hd24info.dsp  hd24tools.dsw  hd24towav.dsp
(+88 files in other folders)
