#
# This is the start of an autotools build system. It's still very much a work
# in-progress and can't be reliably used yet. ~mcrute
#
m4_define(HD24TOOLS_VERSION, 1.0)

AC_PREREQ(2.61)
AC_INIT(hd24tools, HD24TOOLS_VERSION, http://hd24tools.com/)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
AC_SEARCH_LIBS([XpmCreatePixmapFromData], [Xpm])
AC_SEARCH_LIBS([sf_command], [sndfile])
AC_SEARCH_LIBS([jack_client_new], [jack])
AC_SEARCH_LIBS([Pa_Initialize], [portaudio])

AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([FL/Fl.H arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h sys/statvfs.h unistd.h])

AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_STRUCT_TM

AC_FUNC_CLOSEDIR_VOID
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_FUNC_STRTOD
AC_CHECK_FUNCS([floor getcwd memchr memset mkdir strchr strdup strtol])
AC_CONFIG_FILES([Makefile])

AC_OUTPUT

# vim:syntax=m4:
